replaced set with vavr version