@@ -5,14 +5,11 @@
 
 package com.github.tonivade.tinydb.command.set;
 
+import static com.github.tonivade.resp.protocol.RedisToken.integer;
 import static com.github.tonivade.tinydb.data.DatabaseKey.safeKey;
 import static com.github.tonivade.tinydb.data.DatabaseValue.set;
-import static java.util.stream.Collectors.toList;
 
-import java.util.HashSet;
 import java.util.LinkedList;
-import java.util.List;
-import java.util.Set;
 
 import com.github.tonivade.resp.annotation.Command;
 import com.github.tonivade.resp.annotation.ParamLength;
@@ -22,8 +19,12 @@ import com.github.tonivade.resp.protocol.SafeString;
 import com.github.tonivade.tinydb.command.TinyDBCommand;
 import com.github.tonivade.tinydb.command.annotation.ParamType;
 import com.github.tonivade.tinydb.data.DataType;
-import com.github.tonivade.tinydb.data.DatabaseValue;
 import com.github.tonivade.tinydb.data.Database;
+import com.github.tonivade.tinydb.data.DatabaseValue;
+
+import io.vavr.collection.List;
+import io.vavr.collection.Set;
+import io.vavr.collection.Stream;
 
 @Command("srem")
 @ParamLength(2)
@@ -32,21 +33,16 @@ public class SetRemoveCommand implements TinyDBCommand {
 
   @Override
   public RedisToken execute(Database db, Request request) {
-    List<SafeString> items =  request.getParams().stream().skip(1).collect(toList());
-    List<SafeString> removed = new LinkedList<>();
+    List<SafeString> items = Stream.ofAll(request.getParams()).tail().toList();
+    LinkedList<SafeString> removed = new LinkedList<>();
     db.merge(safeKey(request.getParam(0)), DatabaseValue.EMPTY_SET,
         (oldValue, newValue) -> {
-          Set<SafeString> merge = new HashSet<>();
-          merge.addAll(oldValue.getValue());
-          for (SafeString item : items) {
-            if (merge.remove(item)) {
-              removed.add(item);
-            }
-          }
-          return set(merge);
+          Set<SafeString> merge = oldValue.getSet();
+          items.retainAll(merge).forEach(removed::add);
+          return set(merge.removeAll(items));
         });
 
-    return RedisToken.integer(removed.size());
+    return integer(removed.size());
   }
 
 }
